 buildscript {
  ext {
    springBootVersion = '3.4.12'
    // Remove this line to see what version is favored by springBootVersion
    // and the version brought in by spring-data-elasticsearch
    set('elasticsearch.version', '7.12.1')
  }
  repositories {
    jcenter()
    maven { url "https://repo.spring.io/release" }
    maven { url "https://repo.spring.io/milestone" }
    maven { url "https://repo.spring.io/snapshot" }
    mavenCentral()
  }

  dependencies {
    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
  }
}

plugins {
  id 'java'
  id 'eclipse'
  id 'war'
  id 'org.springframework.boot' version "${springBootVersion}"
  id 'io.spring.dependency-management' version '1.1.7'
  id 'maven-publish'
  // google java format gradle plugin
  id "com.diffplug.spotless" version "6.25.0"
  id 'com.github.spotbugs' version '6.0.0'
}

repositories {
  mavenLocal()
  jcenter()
  maven { url "https://repo.spring.io/release" }
  maven { url "https://repo.spring.io/milestone" }
  maven { url "https://repo.spring.io/snapshot" }
  mavenCentral()
}

// Avoid specifying version unless needed
// ext['log4j2.version'] = '2.25.0'

// Extra Properties
ext {
  // Parameters
  if (!project.hasProperty("inputPath")) {
    inputPath = "na"
  }
  if (!project.hasProperty("listFile")) {
    listFile = "na"
  }
  if (!project.hasProperty("terminology")) {
    terminology = "na"
  }
}

/* Version info */
group = "gov.nih.nci.evs.api"
version = "2.4.0.RELEASE"

sourceCompatibility = 17
targetCompatibility = 17

springBoot {
  // generate file META-INF/build-info.properties during the build
  buildInfo()
}

// Java Toolchain to detect which version of Java to use, if not present
// it will automatically download and install the required version of Java
java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }

}

dependencies {

  implementation "org.springframework.boot:spring-boot-starter-web"

  // Use version 2 with spring boot 3
  // custom location => springdoc.swagger-ui.path=/swagger-ui/index.html
  implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0"

  implementation "org.springframework.boot:spring-boot-devtools"
  implementation "org.springframework.boot:spring-boot-starter-actuator"
  // Explicit patch for spring-core to mitigate CVE-2025-41249
  implementation 'org.springframework:spring-core:6.2.11'
  implementation "org.springframework.boot:spring-boot-starter-cache"
  implementation "org.springframework.boot:spring-boot-properties-migrator"
  implementation "org.springframework:spring-aop"

  // For vulnerabilities - may not be needed with Spring Boot 3.4.10
  // implementation "org.apache.tomcat.embed:tomcat-embed-core:10.1.44"

  //implementation "org.springframework.data:spring-data-elasticsearch:4.2.12"
  implementation "org.opensearch.client:spring-data-opensearch-starter:1.7.1"

  // Explicit override for vulnerability still present in spring-data-opensearch-starter:1.7.1
  // and spring-data-opensearch-starter:1.8.2, but both use 2.19.x as a basis
  implementation "org.opensearch:opensearch-common:2.19.4"

  //Java Mail Sender dependency
  implementation "org.springframework.boot:spring-boot-starter-mail"

  implementation "org.aspectj:aspectjweaver:1.9.2"
  implementation "org.apache.commons:commons-text:1.10.0"
  //implementation "org.apache.opennlp:opennlp-tools:2.2.0"

  // Upgrade ecache to use jakarta - https://groups.google.com/g/ehcache-users/c/sKfxWuTpY-U
  // See also: https://stackoverflow.com/questions/75813659/gradle-could-not-find-org-ehcacheehcache-after-upgrading-to-spring-boot-3-0-x
  // Note: ehcache 3.10.8 uses Jakarta by default, no classifier needed
  implementation "org.ehcache:ehcache:3.10.8"

  // JAXB dependencies required for ehcache with Java 9+
  // ehcache 3.10.8 still uses javax.xml.bind internally for XML parsing
  implementation 'javax.xml.bind:jaxb-api:2.3.1'
  implementation 'com.sun.xml.bind:jaxb-impl:2.3.3'

  // Apache POI for reading .xls and .xlsx files
  implementation 'org.apache.poi:poi:5.2.3'
  implementation 'org.apache.poi:poi-ooxml:5.2.3'

  //implementation 'commons-io:commons-io:2.14.0'
  //implementation 'commons-cli:commons-cli:1.4'
  implementation 'cglib:cglib:3.3.0'
  implementation 'com.google.protobuf:protobuf-java:3.25.5'

  // fhir dependencies
  implementation "ca.uhn.hapi.fhir:hapi-fhir-base:7.6.1";
  implementation "ca.uhn.hapi.fhir:hapi-fhir-structures-r4:7.6.1"
  implementation "ca.uhn.hapi.fhir:hapi-fhir-structures-r5:7.6.1"
  implementation "ca.uhn.hapi.fhir:hapi-fhir-server:7.6.1"
  implementation("ca.uhn.hapi.fhir:hapi-fhir-jpaserver-base:7.6.1") {
    exclude group: "net.minidev", module: "json-smart"
    exclude group: "ca.uhn.hapi.fhir", module: "hapi-fhir-sql-migrate"
    exclude group: "org.elasticsearch.client", module: "elasticsearch-rest-high-level-client"
    exclude group: "org.elasticsearch.client", module: "elasticsearch-rest-client"
    exclude group: "org.hibernate.search"
    exclude group: "org.apache.lucene"
    exclude group: "com.github.jsonld-java", module: "jsonld-java"
    exclude group: "com.graphql-java", module: "graphql-java"
    exclude group: "org.glassfish", module: "javax.el"
    exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
  }
  implementation "ca.uhn.hapi.fhir:hapi-fhir-server-openapi:7.6.1"

  // For the moment, these require explicit 6.4.0 to resolve vulnerabilities (as 7.4.5 above is current)
  implementation "org.fhir:ucum:1.0.9"
  //implementation "ca.uhn.hapi.fhir:org.hl7.fhir.convertors:6.4.0"
  //implementation "ca.uhn.hapi.fhir:org.hl7.fhir.dstu2:6.4.0"
  //implementation "ca.uhn.hapi.fhir:org.hl7.fhir.dstu2016may:6.4.0"
  //implementation "ca.uhn.hapi.fhir:org.hl7.fhir.dstu3:6.4.0"
  //implementation "ca.uhn.hapi.fhir:org.hl7.fhir.r4:6.4.0"
  //implementation "ca.uhn.hapi.fhir:org.hl7.fhir.r4b:6.4.0"
  //implementation "ca.uhn.hapi.fhir:org.hl7.fhir.r5:6.4.0"
  //implementation "ca.uhn.hapi.fhir:org.hl7.fhir.utilities:6.4.0"
  //implementation "ca.uhn.hapi.fhir:org.hl7.fhir.validation:6.4.0"

  // disk-backed map implementation
  implementation 'org.mapdb:mapdb:3.1.0'
  // Lombok dependencies (avoid using lombok for now)
  //implementation "org.projectlombok:lombok:1.18.32"
  //annotationProcessor "org.projectlombok:lombok:1.18.32"
  //compileOnly "org.projectlombok:lombok:1.18.32"

  // SpotBugs annotations
  compileOnly 'com.github.spotbugs:spotbugs-annotations:4.8.2'

  /*
   * Test Dependencies
  */
  testImplementation("org.springframework.boot:spring-boot-starter-test")
  // Use spring-boot-starter-test defaults
  // testImplementation "org.opensearch.client:spring-data-opensearch-test-autoconfigure:1.6.0"
  // testImplementation "org.junit.jupiter:junit-jupiter-params:5.10.5"
  // testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.5"
  // testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.5"
  // testRuntimeOnly "org.junit.platform:junit-platform-commons:1.10.0"
  // testRuntimeOnly "org.junit.platform:junit-platform-runner:1.10.0"
  // (avoid using lombok for now)
  // testCompileOnly "org.projectlombok:lombok:1.18.32"
  // testAnnotationProcessor "org.projectlombok:lombok:1.18.32"

}

test {
  useJUnitPlatform{}
  // Args to pass when running the tests to ensure the cglib can be accessed and avoid InaccessibleObjectException
  jvmArgs("-Xmx8G", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
  // Set the active profile to use our application-test.yml file from test resources
  systemProperty("spring.profiles.active", "test")
  /*
   * Configure gradle to show standard out and standard error
   * of the test JVM(s) on the console
   */
  testLogging.showStandardStreams = true
}

// Format the code using google-java-format: https://github.com/diffplug/spotless/blob/main/plugin-gradle/README.md
// Use ./gradlew spotlessCheck to run checks
// Use ./gradlew spotlessApply to perform fixes
spotless {
  format 'misc', {
    // define the files to apply `misc` to
    target '*.gradle', '.gitattributes', '.gitignore'

    // define the steps to apply to those files
    trimTrailingWhitespace()
    indentWithSpaces(2) // or spaces. Takes an integer argument if you don't like 4
    endWithNewline()
  }
  java {
    target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
    // apply a specific flavor of google-java-format
    googleJavaFormat('1.22.0').reflowLongStrings().formatJavadoc(true).reorderImports(true).groupArtifact('com.google.googlejavaformat:google-java-format')
    removeUnusedImports()
    // fix formatting of type annotations
//        formatAnnotations()
  }
}

// SpotBugs and CheckStyle
spotbugs {
    ignoreFailures = false
    showStackTraces = true
    showProgress = true
    excludeFilter = file("config/spotbugs/excludeFilter.xml")
    // jvmArgs = [ "-Duser.language=ja" ]
}
spotbugsMain {
    enabled = true
    reports {
        xml.enabled = false
        html.enabled = true
    }
}
spotbugsTest {
    enabled = true
    reports {
        xml.enabled = false
        html.enabled = true
    }
}

// # for this, the cuis with listed sources will have hierarchies computed
// ./gradlew rrfSample -Pterminology=NCIMTH,MDR,ICD10CM,ICD9CM,LNC,SNOMEDCT_US,RADLEX,PDQ,ICD10,HL7V3.0 -PlistFile=src/main/resources/cuis-202508.txt -PinputPath=../data/NCIM/META
tasks.register('rrfSample', JavaExec) {
  classpath = sourceSets.main.runtimeClasspath
  main = "gov.nih.nci.evs.api.service.SamplingApplication"
  systemProperties System.getProperties()
  // arguments to pass to the application
  args("rrfSample", inputPath, listFile, terminology)
  jvmArgs "-Xmx8G"
}


tasks.register('zipFile', Zip) {
  def zipFileRootDirectory = "${project.name}-${project.version}"

  from('src/main/bin') {
    fileMode = 0755
    into "$zipFileRootDirectory/bin"
  }
  from("$buildDir/main/bin") {
    fileMode = 0755
    include '**/createDirectoriesForWorkspace.pl'
    into "$zipFileRootDirectory/bin"
  }
  from('src/main/config') {
    into "${archiveBaseName}-${project.version}/config"
    into "$zipFileRootDirectory/config"
  }
  from("$buildDir/main/config") {
    include '**/createDirectories.properties'
    into "$zipFileRootDirectory/config"
  }
  from("$buildDir/libs") {
    include '*.*'
    into "$zipFileRootDirectory/lib"
  }
  rename { String fileName ->
    fileName.replace("-${project.version}", "")
  }
}

// NOTE: this causes LoaderServiceImpl to launch when run via -jar
bootJar {
  manifest {
    attributes 'Start-Class': 'gov.nih.nci.evs.api.service.LoaderServiceImpl'
  }
  // Handle duplicate copying more than one file to the same destination
  // https://docs.gradle.org/8.2.1/dsl/org.gradle.api.tasks.Copy.html#org.gradle.api.tasks.Copy:duplicatesStrategy
  duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
}

zipFile.dependsOn = [bootWar, bootJar]
build.dependsOn = [spotlessCheck, spotbugsMain, spotbugsTest, test, bootWar, bootJar, zipFile]
publishToMavenLocal.dependsOn = [bootWar, bootJar, zipFile]

dependencyLocking {
  lockAllConfigurations()
}
